Fix some more layout issues.

--- a/trackers/static/event.css
+++ b/trackers/static/event.css
@@ -23,7 +23,6 @@ html, body {
     color: white;
     display: -ms-flexbox; display: flex;
     -ms-flex-wrap: wrap; flex-wrap: wrap;
-    -ms-flex: 1 0 auto;
     justify-content: space-between;
 }
 
@@ -45,12 +44,12 @@ html, body {
 
 #map_riders {
     display: -ms-flexbox; display: flex;
-    -ms-flex: 2 1 100%; flex: 2 1 100%;
+    -ms-flex: 1 1 80%; flex: 1 1 100px;
     position: relative;
 }
 
 #map_contain {
-  -ms-flex: 2 1 100%; flex: 2 1 100%;
+  -ms-flex: 1 1 80%; flex: 1 1 80%;
   position: relative;
 }
 
@@ -68,13 +67,13 @@ html, body {
 }
 
 #riders_contain {
-    -ms-flex: 1 1 30%; flex: 1 1 30%;
+    -ms-flex: 1 1 20%; flex: 1 1 20%;
     position: relative;
-    padding: 8px;
     background: white;
 }
 
 #riders {
+    padding: 8px;
     overflow: auto;
 }
 
@@ -92,13 +91,13 @@ html, body {
 }
 
 #riders_contain.small {
-    margin: 10px;
     position: absolute;
     top: 0;
     box-shadow: 2px 2px 4px -1px rgba(0, 0, 0, 0.5);
     background: white;
     border-radius: 2px;
     z-index: 3;
+    margin: 10px;
 }
 
 #riders table{
@@ -165,13 +164,12 @@ html, body {
         position: relative;
         box-shadow: none;
         max-width: 100%;
-        margin: 0;
     }
     #riders{
         position: absolute;
         max-width: 100%;
         top: 0; bottom: 0; left: 0; right: 0;
-        margin: 10px;
+        padding: 8px;
     }
     #riders>table{
         width: 100%
